Description: UI: Input spinner for go to page dialog Steps to Reproduce: 1. Open Writer 2. Left click on page number in the status bar (left) Actual Results: Dialog without 'spinner' or I think it's called that way (up/down arrow). Compare go to page in sidebar navigator Expected Results: Up/down button. And allowance of pressing keyboard up/down and/or use hoover over scroll wheel up down Reproducible: Always User Profile Reset: No Additional Info: Version: 7.1.0.0.alpha1+ (x64) Build ID: 5a96093f0ecee53432bdf35f247edd6deb501baf CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win Locale: nl-NL (nl_NL); UI: en-US Calc: CL
@Caolan You maybe interested. I don't have 'permission' from UX, but think no harm being done here
Yeah, I think it's a good idea
It's a GtkSpinEdit that you prefer over the simple edit field. Easyhack, let's save Caolan's precious time for advanced tasks. Code pointer: sw/uiconfig/swriter/ui/gotopagedialog.ui; maximum needs to be set per code in sw/source/uibase/utlui/gotodlg.cxx
tobias committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/72c000a8fd28215e839a731bb00147395f35ba4e tdf#138255 use GtkSpinButton in SwGotoPageDlg It will be available in 7.3.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.