tdf#138255 use GtkSpinButton in SwGotoPageDlg

Use GtkSpinButton instead of GtkEntry in SwGotoPageDlg analogous to
the widget in SwNavigationPI.

Change-Id: I0ddb4433bea23d8f3d460bd69f30a10b8f7ce984
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121688
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>